[swagger]: add format: uri for url fields
